{{$NEXT}}

5.133410  2013-12-07 23:39:15 Europe/London

  [NEW FEATURES]

  * Add yatg-trim script to recover space used by Disk Store (C. Causer)

5.130840  2013-03-25 22:41:57 Europe/London

  [NEW FEATURES]

  * Can specify nsca_port to NSCA Store backend, in addition to the host

5.130600  2013-03-01 16:45:46 Europe/London

  [NEW FEATURES]

  * newhosts_watch option, which triggers host-list update if modified

5.130520  2013-02-21 10:45:40 Europe/London

  [ENHANCEMENTS]

  * Add threshold check to Errors and Discards NSCA reporter - min 1/minute

  [BUG FIXES]

  * POD fixes

5.130511  2013-02-20 18:03:29 Europe/London

  [BUG FIXES]

  * Fix bug with multiple community strings - only first was used
  * Fix check of Dialer interface status which can be "dormant" (~~ "up")

5.130510_001 2013-02-20 13:04:42 Europe/London

  [NEW FEATURES]

  * New environment variable YATG_INTERVAL to override interval config val
  * NSCA plugin now has per-leaf reports for ifOperStatus, ifInErrors, ifInDiscards
  * New config option dbi_host_query to load hostnames for IPs (used in NSCA plugin only)
  * New config option dbi_interfaces_query to filter interfaces repoted by NSCA plugin
  * New ignore_*_descr config to filter interfaces by description in NSCA plugin

  [ENHANCEMENTS]

  * Remove all non-essential dependencies. User must install deps for each plugin
  * NSCA plugin no longer tries DNS PTR lookup - host names must be suitable for Nagios
  * NSCA plugin no longer searches for send_nsca in PATH
  * Use Data::Printer instead of Data::Dumper in STDOUT backend module

  [BUG FIXES]

  * Add explicit dependencies on YAML::XS and Sys::Syslog 0.25

4.112532  2011-09-10 14:24:35 Europe/London

  * Make NSCA config optional (D. Walrond)
  * Remove VERSION so that release is indexed properly

4.112530  2011-09-10 12:42:15 Europe/London

  * Port to Dist::Zilla

yatg (3.02) UNRELEASED; urgency=low
